# Manual-automation

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HARNESS.md  README.md  docker-compose.yml  docops_ai_llm_service_prompt.md  entrypoint.sh  supervisord.conf
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002975bd3c88_add_sr_ai_doc_recommendation.py  1ebf40fb8611_add_jira_tables_and_sr_jira_fields.py  45b673d87854_add_action_and_edited_content_to_.py  5e9dc43fefb5_add_reviewed_text_to_feedback_reports.py  (+18 more)
backend/app/: config.py  db.py  main.py  seed.py
backend/scripts/: reembed_chunks.py
backend/tests/: conftest.py  test_ai_doc_recommendation.py  test_approval_doc_review.py  test_approval_document_registration.py  test_approvals.py  test_change_impact.py  test_chat.py  test_chat_service.py  test_chunking.py  test_document_reflection.py  test_documents.py  test_edge_cases.py  test_embedding.py  test_extract_click_target.py  test_feedback.py  test_file_converter.py  test_integration.py  test_jira.py  test_jira_comment_webhook.py  test_jira_config_router.py  test_jira_helpers.py  test_latest_proposal.py  test_manual_completion_notification.py  test_manual_delete.py  test_manual_jobs_embed.py  test_models.py  test_notifications_link_path.py  test_notifications_list_filters.py  test_review_doc_review_approval.py  test_review_history.py  test_screenshot_storage.py  test_sr.py  test_sr_jira_url.py  test_sr_transition_guard.py  test_trust.py  test_users.py  test_widget.py
(+217 files in other folders)
