[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "anthropic[bedrock]>=0.50.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "pymupdf>=1.24.0",
    "python-pptx>=1.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
    "email-validator>=2.3.0",
    "pyjwt>=2.8.0",
    "aiohttp>=3.13.5",
    "greenlet>=3.5.0",
    "playwright>=1.60.0",
    "mammoth>=1.12.0",
    "openpyxl>=3.1.5",
    "markdownify>=1.2.2",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
